Refactor code structure for improved readability and maintainability

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,42 +1,43 @@
----
-title: Introduction
----
+# Introduction to ForgeStack  
 
-# Introduction to ForgeStack
+Welcome to **ForgeStack**, a Firebase-focused stack template built with **Next.js**. ForgeStack simplifies the development of serverless applications by providing pre-configured Firebase integrations, custom hooks, and a scalable architecture. 
 
-Welcome to **ForgeStack**, a Firebase-focused stack template built with **Next.js**. ForgeStack simplifies the development of serverless applications by providing pre-configured Firebase integrations, custom hooks, and a scalable architecture.
+## So... what is `create-forgestack`? A template?
 
-## Why Use ForgeStack?
+Basically...Yeah!  `create-forgestack` is a CLI built by [Tarun](https://tmonga2208.vercel.app/), A Firebase and Next.js developer to help you spin up a modular, production-ready stack — fast. It's not a bloated boilerplate. It's a curated setup that gives you full control over what matters.
+Each part of ForgeStack is intentional. The stack is opinionated about structure and integration, but modular where it counts. You get solid defaults (Firebase, Tailwind, Shadcn/UI, theming, custom hooks), and the flexibility to extend things your way.
 
-- 🔥 **Firebase-First** – Built to leverage Firebase Realtime Database, Firestore, Auth, and Storage.
-- ⚡ **Optimized for Next.js** – Full support for SSR, ISR, and API routes.
-- 🎨 **Theming Support** – Includes built-in light/dark mode.
-- 🛠 **Custom Hooks** – Easy-to-use Firebase utility hooks.
-- 🚀 **Production-Ready** – Scalable and well-structured codebase.
+This is **not** an all-in-one, solves-everything-for-you template. We expect you to bring your own tools for things like state management, data fetching layers, and deployment strategies. We're not here to lock you into "one way" — we just want to give you a really good head start.
+We’ve built dozens of Firebase projects, large and small, and this stack reflects what we've learned (sometimes the hard way). `create-forgestack` is our way of helping you skip the grunt work and get straight to building.
+> Less time wiring up Firebase, more time shipping features.
 
-## Features
 
-### 🔐 Authentication
-Easily integrate Firebase Authentication using the built-in `useAuth.ts` hook.
+## Why Use ForgeStack?  
 
-### 📂 Database & Storage
-Access **Firestore**, **Realtime Database**, and **Firebase Storage** with helper hooks (`useDatabase.ts`, `useRealtimeDB.ts`, `useStorage.ts`).
+- **Firebase-First** – Designed to work seamlessly with Firebase Realtime Database, Firestore, Authentication, and Storage.  
+- **Optimized for Next.js** – Supports Server-Side Rendering (SSR), Incremental Static Regeneration (ISR), and API routes.  
+- **Theming Support** – Includes built-in light and dark mode.  
+- **Custom Hooks** – Provides utility hooks for Firebase services, making integration easier.  
+- **Production-Ready** – A well-structured, scalable codebase designed for real-world applications.  
 
-### 🎨 Theming
-Built-in **dark mode** support with `next-themes`.
+## Features  
 
-### ⚡ CLI for Quick Setup
-Use `create-forgestack` CLI to bootstrap your project in seconds.
+### Authentication  
+Integrate Firebase Authentication easily using the `useAuth.ts` hook.  
 
-## Who is ForgeStack for?
-ForgeStack is ideal for:
-- Developers building **Firebase-powered applications**
-- Teams that want a **pre-configured** Next.js & Firebase setup
-- Anyone looking for a **scalable, serverless** architecture
+### Database & Storage  
+Work with Firestore, Realtime Database, and Firebase Storage using helper hooks (`useDatabase.ts`, `useRealtimeDB.ts`, `useStorage.ts`).  
 
-## Next Steps
-- [Getting Started →](./getting-started)
-- [Authentication](./authentication)
-- [Database Integration](./database)
+### Theming  
+Supports dark mode using `next-themes`.  
 
-Happy coding with ForgeStack! 🚀
+## Who is ForgeStack for?  
+ForgeStack is ideal for:  
+- Developers building applications powered by Firebase.  
+- Teams looking for a pre-configured Next.js and Firebase setup.  
+- Anyone who needs a scalable, serverless architecture.  
+
+## Next Steps  
+- [Getting Started →](./getting-started)  
+- [Authentication](./authentication)  
+- [Database Integration](./database)  
