--- a/app/getting-started/page.mdx
+++ b/app/getting-started/page.mdx
@@ -32,13 +32,14 @@ After installation, your project will have the following structure:
 my-app/
 ├── public/      # Static assets
 ├── src/
-│   ├── components/  # Reusable ShadCN UI components
-│   ├── context/     # User Contexts
+│   ├── app/         # (Next.js App Router)
+│   ├── components/  # Reusable UI components
+│   ├── context/     # User/Theme Contexts
 │   ├── hooks/       # Custom Firebase hooks
-│   ├── styles/      # Global styles
 │   ├── lib/         # Configuration files 
-├── next.config.js  # Next.js configuration
-├── package.json  # Project dependencies
+├── next.config.js   # Next.js configuration
+├── package.json     # Project dependencies 
+├── components.json  # Shadcn/UI component registry
 └── README.md   # Project documentation
 ```
 
@@ -73,7 +74,7 @@ Your app will be available at `http://localhost:3000`.
 
 ## Next Steps
 
-- Learn about [Authentication](./authentication)
+- Learn about [Authentication](./usage/authentication)
 - Explore [Database Integration](./database)
 - Customize [Themes](./theming)
 
