--- a/app/templates/note-app/page.mdx
+++ b/app/templates/note-app/page.mdx
@@ -54,17 +54,11 @@ Fully responsive design that works perfectly on all devices.
 
 ## Quick Start Guide
 
-### Prerequisites
-
-- Node.js (v18 or later)
-- npm or Yarn
-- Firebase Account
-
 ### 1. Clone the Repository
 
 ```bash
-git clone https://github.com/yourusername/notesync.git
-cd notesync
+git clone https://github.com/tmonga2208/note-take.git
+cd note-take
 ```
 
 ### 2. Install Dependencies
