--- a/app/page.mdx
+++ b/app/page.mdx
@@ -9,7 +9,7 @@ Each part of ForgeStack is intentional. The stack is opinionated about structure
 
 This is **not** an all-in-one, solves-everything-for-you template. We expect you to bring your own tools for things like state management, data fetching layers, and deployment strategies. We're not here to lock you into "one way" — we just want to give you a really good head start.
 We’ve built dozens of Firebase projects, large and small, and this stack reflects what we've learned (sometimes the hard way). `create-forgestack` is our way of helping you skip the grunt work and get straight to building.
-> Less time wiring up Firebase, more time shipping features.
+> Less time wiring up Databases, more time shipping features.
 
 
 ## Why Use ForgeStack?  
